# interactive-computer-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup_env.sh
01-hello-world/: :w  CMakeLists.txt  README.md
01-hello-world/external_libs/glad/include/glad/: gl.h
01-hello-world/src/: main.cpp
02-obj-loading/: CMakeLists.txt  README.md
02-obj-loading/src/: main.cpp
03-shading/: CMakeLists.txt  README.md
03-shading/src/: main.cpp
common/ofyaGl/: CMakeLists.txt
common/ofyaGl/include/ofyaGl/: gl.h  obj.h  shader.h  window.h
common/ofyaGl/src/: gl.cpp  obj.cpp  shader.cpp  window.cpp
shaders/: 02.frag  02.vert  03.frag  03.vert
